--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -15,6 +15,16 @@ html{
     font-weight: 400;
     line-height: 1.6rem;
     box-sizing: border-box;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
 }
 .grid{
     width: 1200px;
@@ -28,4 +38,6 @@ html{
     display: flex;
     flex-wrap: wrap;
 } 
-
+input:focus{
+    outline: none;
+}
