update code chat group

--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -41,3 +41,7 @@ html{
 input:focus{
     outline: none;
 }
+#zmmtg-root{
+    /* background-color: #fafafa !important;*/
+    display: none !important; 
+}
