--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -221,3 +221,89 @@
     display: flex;
     margin-left: 23rem;
 }
+.menu_mobile{
+    
+    display: none !important;
+    
+    
+}
+/* mobile  : width < 740px */
+@media only screen and (max-width: 46.1875em){
+	.menu_mobile{
+        display: flex !important;
+        position: relative;
+        padding: 3rem;
+    }
+    .menu-drop{
+        color: #fff;
+        font-size: 4rem !important;
+        position: absolute;
+        left: 90%;
+        margin: auto 0;
+    }
+    .header__navbar{
+        display: none !important;
+    }
+    .overlay{
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+        display: none;
+    }
+    .nav__moblie{
+        position: fixed;
+        top:0;
+        right: 0;
+        bottom:0;
+        width: 32rem;
+        max-width: 100%;
+        background-color: rgba(255, 255, 255,1);
+        transform: translateX(100%) ;
+    }
+    .nav__moblie-list{
+        margin-top: 2.4rem;
+        
+    }
+    .nav__mobile-link{
+        text-decoration: none;
+        color: #333;
+        display: block;
+        padding: 1rem 1rem;
+        font-size: 1.6rem;
+    }
+    .nav__moblie-Btnclose{
+        position: absolute;
+        right: 2rem;
+        font-size: 2rem !important;
+        font-weight: 700;
+    }
+    .nav__moblie-close{
+        height: 3rem;
+        width: 3rem;
+        cursor: pointer;
+    }
+    .nav__input:checked ~ .overlay{
+        display: block;
+        z-index: 1;
+    }
+    .nav__input:checked ~ .nav__moblie{
+        transform: translateX(0%) ;
+    }
+    .close:checked ~ .nav__moblie{
+        display: none !important;
+    }
+    .close:checked ~ .overlay{
+        display: none !important;
+    }
+    
+
+}
+/* Table : width > 740px and width < 1024 */
+@media only screen and (min-width: 46.25em) and (max-width: 63.9375em){
+	.menu{
+        display: block;
+    }
+}
