--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -11,9 +11,9 @@
 html{
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    font-size: 62.5%;
+    /* font-size: 16px; */
     font-weight: 400;
-    line-height: 1.6rem;
+    line-height: 16px;
     box-sizing: border-box;
     overflow: scroll;
     overflow-x: hidden;
@@ -45,3 +45,4 @@ input:focus{
     /* background-color: #fafafa !important;*/
     display: none !important; 
 }
+
