--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -4,52 +4,48 @@
 }
 .header__navbar{
     display: flex;
-    padding: 2rem;
+    padding: 20px;
 }
 
 .header__logo{
-    width: 5rem;
-    height: 5rem;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     
 }
 .header__navbar_left-search{
-    margin-left: 1.5rem;
-    width: 35rem;
+    margin-left: 15px;
+    width: 350px;
     
 }
 .ForwardRef-root-1 {
-    border-radius: 10rem !important;
+    border-radius: 100px !important;
     
 }
 .MuiInputBase-input{
-    font-size: 1.6rem !important;
+    font-size: 16px !important;
 }
 
 .header__navbar_left{
     display: flex;
-    margin-top: 1rem;
-    width: 30%;
+    margin-top: 10px;
+    width: 350px;
     
 }
-
 .header__navbar_center{
-    width: 30%;
-    margin-left: 15rem;
+    
+    margin-left: 15px;
+    padding-left: 200px;
     
 
 }
 .header__navbar-icon{
-    margin: 0 2.5rem 0 0;
-    font-size: 4.5rem !important; 
+    margin: 0 25px 0 0;
+    font-size: 45px !important; 
 }
-
-
-
-
 .header__navbar_right{
-    width: 30%;
-    margin-top: 0.7rem;
+    margin-top: 7px;
+    padding-left: 5%;
     
 }
 .header__navbar {
@@ -63,59 +59,59 @@
     display: flex;
 }
 .header__item {
-    margin-top: 1rem;
+    margin-top: 10px;
     margin: 0;
     position: relative;
-    width: 10rem;
+    width: 100px;
     display: flex !important;
     padding: 1.5% 0 0 5.3%;
 }
 .name{
-    font-size: 2rem;
-    margin: 0.75rem;
+    font-size: 20px;
+    margin: 10px 20px 0 10px;
     color: rgb(250, 250, 255);
-    margin-top: 1rem;
+    margin-top: 10px;
     font-weight: 600;
 }
 .icon-user{
-    font-size: 2.5rem !important;
-    margin-top: 0.2rem !important;
+    font-size: 25px !important;
+    margin-top: 2px !important;
 }
 
 .header__user{
-    margin-top: 1rem;
-    margin: 0 8px;
+    margin: -5px 0 0 0;
+
     position: relative;
     text-decoration: none;
-    padding: 0.5rem 0 0 0;
-    display: flex !important;
-}
-.header__user{
-    margin: -0.5rem 0 0 0;
-    position: relative;
-    padding: 0.5rem 0 0 0;
+    padding: 5px 0 0 0;
     display: flex !important;
     color:white;
 }
+
 .item-user{
     background-color: #e4e6eb;
-    padding: 1rem;
+    padding: 10px;
     border-radius: 50%;
-    margin: 0 1rem;
-    height: 5rem;
-    width: 5rem;
+    margin: 0 10px;
+    height: 50px;
+    width: 50px;
 }
 .item-user-drop{
     background-color: #e4e6eb;
-    padding: 0.3rem;
+    padding: 3px;
     border-radius: 50%;
-    margin: 0 1rem;
-    height: 5rem;
-    width: 5rem;
+    margin: 0 10px;
+    height: 50px;
+    width: 50px;
+}
+.icon-user{
+    font-size: 30px !important;
+    margin-top: 7px !important;
+    color: rgb(56, 55, 55)  !important;
 }
 .icon-user-drop{
-    font-size: 4rem !important;
-    margin-top: 0.2rem !important;
+    font-size: 40px !important;
+    margin-top: 2px !important;
 }
 .item-user, .item-user-drop{
     cursor: pointer;
@@ -158,17 +154,18 @@
 
 .tooltiptextHome, .tooltiptextCourse, .tooltiptextGroup, .tooltiptextEvent, .tooltiptextMatch {
     visibility: hidden;
-    width: 120px;
+    width: 150px;
     background-color: rgba(0, 0, 0, 0.4);
     color: #fff;
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
-    top:5.5rem;
-    left:-11%;
+    top:70px;
+    left:-30px;
     /* Position the tooltip */
     position: absolute;
-    z-index: 1;
+    z-index: 10;
+    font-size: 16px !important;
   }
 
 .header__item-strong {
@@ -202,11 +199,11 @@
 .active::after {
     position: absolute;
     display: block;
-    top: 4.5rem;
+    top: 45px;
     content: '';
     
     width: 140%;
-    height: 0.8rem;
+    height: 8px;
     transform: rotate(-2deg);
     background-color: #1877f2;
     left:-20%;
@@ -219,7 +216,7 @@
     padding-left: 0;
     padding: 0 30px;
     display: flex;
-    margin-left: 23rem;
+    margin-left: 0;
 }
 .menu_mobile{
     
@@ -281,8 +278,8 @@
         font-weight: 700;
     }
     .nav__moblie-close{
-        height: 3rem;
-        width: 3rem;
+        height: 30px;
+        width: 30px;
         cursor: pointer;
     }
     .nav__input:checked ~ .overlay{
