--- a/src/feature/components/About/style.css
+++ b/src/feature/components/About/style.css
@@ -5,13 +5,13 @@
     
 }
 .logo{
-    margin: 2rem 0 2rem 35rem;
+    margin: 20px 0 20px 350px;
 
 }
 
 .action{
-    margin: 1.5rem 0 0 3rem;
-    font-size: 2rem;
+    margin: 15px 0 0 30px;
+    font-size: 20px;
     font-weight: 700;
     color: rgb(250, 250, 248);
     cursor: pointer;
