--- a/src/feature/components/messenger/components/call/style.css
+++ b/src/feature/components/messenger/components/call/style.css
@@ -4,7 +4,7 @@
 }
 
 .myId {
-	margin-right: 5rem;
+	margin-right: 50px;
 	border-radius: 5px;
 	background: #c9d6ff; /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #e2e2e2, #c9d6ff); /* Chrome 10-25, Safari 5.1-6 */
@@ -14,7 +14,7 @@
 		#c9d6ff
 	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-	padding: 2rem;
+	padding: 20px;
 	display: grid;
 	justify-content: center;
 	align-content: center;
@@ -22,7 +22,7 @@
 
 .call-button {
 	text-align: center;
-	margin-top: 2rem;
+	margin-top: 20px;
 }
 
 .video-container {
@@ -30,8 +30,8 @@
 	grid-template-columns: 1fr 1fr;
 	justify-content: center;
 	align-content: center;
-	margin-top: 10rem;
-	margin-left: 10rem;
+	margin-top: 100px;
+	margin-left: 100px;
 }
 
 .caller {
