--- a/src/feature/components/topic/components/pagination/style.css
+++ b/src/feature/components/topic/components/pagination/style.css
@@ -6,8 +6,8 @@
     list-style: none;
     display: flex;
     justify-content: center;
-    font-size: 1.6rem;
-    margin: 3rem auto 0 auto;
+    font-size: 16px;
+    margin: 30px auto 0 auto;
   }
   
   .paginationBttns a {
@@ -17,23 +17,23 @@
     border: 1px solid #5b9af8d3;
     color: #2b2eff;
     cursor: pointer;
-    font-size: 1.6rem;
+    font-size: 16px;
   }
   
   .paginationBttns a:hover {
     color: white;
     background-color: #5b5df8;
-    font-size: 1.6rem;
+    font-size: 16px;
   }
   
   .paginationActive a {
     color: white;
     background-color: #2b2eff;
-    font-size: 1.6rem;
+    font-size: 16px;
   }
   
   .paginationDisabled a {
     color: rgb(255, 255, 255);
     background-color: rgb(121, 107, 107);
-    font-size: 1.6rem;
+    font-size: 16px;
   }
