--- a/src/feature/components/groups/components/content groups/components/livestream/style.css
+++ b/src/feature/components/groups/components/content groups/components/livestream/style.css
@@ -31,7 +31,7 @@
   }
   .video-call2{
     display:flex;
-    width: 1060px;
+    width: 1330px;
     overflow: scroll;
     overflow-Y: hidden;
     
@@ -42,4 +42,10 @@
     padding: 10px;
     border: 1px solid #d1d0d0;
     margin-bottom:10px;
+  }
+  .hidden{
+    display: none;
+  }
+  .show{
+    display: block;
   }
