--- a/src/feature/components/BecomeTeacher/style.css
+++ b/src/feature/components/BecomeTeacher/style.css
@@ -12,6 +12,7 @@
     border-radius: 8px;
     font-size: 20px;
     font-weight: bold;
+    margin-bottom: 20px;
   }
   
   .upload-btn-wrapper input[type=file] {
